--- a/manager/src/templates/config_imagens.html
+++ b/manager/src/templates/config_imagens.html
@@ -1,16 +1,13 @@
 {% extends "layout.html" %}
-
 {% block content %}
-<div class="container-fluid mt-5">
-    <div class="d-flex justify-content-between align-items-center">
-        <h2>Gerenciamento de Imagens e Nomes de Contêineres</h2>
-    </div>
+<div class="container-fluid mt-4">
+    <h2>Configuração de Imagens Docker</h2>
+    <p>Defina um nome para cada imagem Docker utilizada.</p>
 
-    <!-- Formulário para adicionar nova configuração de contêiner -->
     <div class="card my-4">
-        <div class="card-header bg-primary text-white">Adicionar Nova Configuração</div>
+        <div class="card-header bg-primary text-white">Adicionar Nova Configuração de Imagem</div>
         <div class="card-body">
-            <form action="{{ url_for('manage') }}" method="post" class="row g-3">
+            <form action="{{ url_for('config_imagens') }}" method="post" class="row g-3">
                 <div class="col-md-6">
                     <label for="name" class="form-label">Nome do Contêiner</label>
                     <input type="text" name="name" id="name" class="form-control" required>
@@ -26,9 +23,7 @@
         </div>
     </div>
 
-    <!-- Tabela de configurações existentes -->
-    <h3 class="mt-4">Configurações Existentes</h3>
-
+    <h3 class="mt-4">Configurações de Imagens Existentes</h3>
     <div class="card my-4">
         <div class="card-body p-0">
             <table class="table table-striped table-hover mb-0">
@@ -36,20 +31,14 @@
                     <tr>
                         <th>Nome do Contêiner</th>
                         <th>Imagem</th>
-                        <th>Ações</th>
                     </tr>
                 </thead>
                 <tbody>
                     {% for item in config.containers %}
-                        <tr>
-                            <td>{{ item.name }}</td>
-                            <td>{{ item.image }}</td>
-                            <td>
-                                <a href="{{ url_for('delete_config', name=item.name) }}" class="btn btn-danger btn-sm">
-                                    Excluir
-                                </a>
-                            </td>
-                        </tr>
+                    <tr>
+                        <td>{{ item.name }}</td>
+                        <td>{{ item.image }}</td>
+                    </tr>
                     {% endfor %}
                 </tbody>
             </table>
