--- a/manager/src/templates/layout.html
+++ b/manager/src/templates/layout.html
@@ -5,15 +5,8 @@
     <title>Container Manager</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <style>
-        body, html {
-            height: 100%;
-        }
-        .full-height {
-            min-height: 100vh;
-        }
-        .service-a { background-color: #e3f2fd; }
-        .service-b { background-color: #ffebee; }
-        /* Adicione mais classes para cada tipo de serviço */
+        body, html { height: 100%; }
+        .full-height { min-height: 100vh; }
     </style>
 </head>
 <body class="full-height">
@@ -25,8 +18,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="{{ url_for('index') }}">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{{ url_for('manage') }}">Manage Containers</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('bairros') }}">Seleção de Bairros</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('config_imagens') }}">Configurar Imagens</a></li>
                 </ul>
             </div>
         </div>
