--- a/manager/src/templates/manage_containers.html
+++ b/manager/src/templates/manage_containers.html
@@ -89,7 +89,7 @@
                                     </form>
                                 </td>
                                 <td>
-                                    <button onclick="fetchLogs('{{ container.short_id }}')" class="btn btn-info btn-sm">Ver Logs</button>
+                                    <button onclick="fetchLogs('{{ container.container.short_id }}')" class="btn btn-info btn-sm">Ver Logs</button>
                                 </td>
                             </tr>
                             {% endfor %}
