--- a/manager/src/templates/layout.html
+++ b/manager/src/templates/layout.html
@@ -18,9 +18,16 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="{{ url_for('bairros') }}">Seleção de Bairros</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{{ url_for('config_imagens') }}">Configurar Imagens</a></li>
-                </ul>
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.endpoint == 'bairros' %}active{% endif %}" href="{{ url_for('bairros') }}">Seleção de Bairros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.endpoint == 'config_imagens' %}active{% endif %}" href="{{ url_for('config_imagens') }}">Configurar Imagens</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.endpoint == 'config_dados' %}active{% endif %}" href="{{ url_for('config_dados') }}">Configurar Tipos de Dados</a>
+                    </li>
+                </ul>                
             </div>
         </div>
     </nav>
