--- a/manager/src/templates/manage_containers.html
+++ b/manager/src/templates/manage_containers.html
@@ -45,59 +45,55 @@
         </div>
     {% endif %}
 
-    <!-- Tabelas de contêineres agrupados por imagem e nome personalizado -->
-    {% for image_name, name_groups in grouped_containers.items() %}
-        
-        <!-- Tabelas separadas para cada nome personalizado dentro do grupo da imagem -->
-        {% for config_name, containers in name_groups.items() %}
-            <h4 class="mt-3">Grupo: {{ containers[0].type_name }}</h4>  <!-- Exibe o display_name do primeiro container -->
+    <!-- Tabelas de contêineres agrupados por tipo -->
+    {% for group in grouped_containers.values() %}
+        <h4 class="mt-3">Grupo: {{ group.type_name }}</h4>  <!-- Exibe o display_name do grupo -->
 
-            <!-- Botão para parar todos os contêineres de um grupo específico -->
-            <div class="mb-3">
-                <form method="POST" action="{{ url_for('stop_group', image_name=image_name|replace('/', '%2F')|replace(':', '%3A'), config_name=config_name, bairro=bairro) }}" class="d-inline-block">
-                    <button type="submit" class="btn btn-warning">Parar Todos do Grupo {{ config_name }}</button>
-                </form>                              
+        <!-- Botão para parar todos os contêineres de um grupo -->
+        <div class="mb-3">
+            <form method="POST" action="{{ url_for('stop_group', image_name='', config_name=group.type_name, bairro=bairro) }}" class="d-inline-block">
+                <button type="submit" class="btn btn-warning">Parar Todos do Grupo {{ group.type_name }}</button>
+            </form>
+        </div>
+
+        <div class="card mb-5 mt-3">
+            <div class="card-body p-0">
+                <table class="table table-striped table-hover mb-0">
+                    <thead class="table-primary">
+                        <tr>
+                            <th>ID</th>
+                            <th>Nome</th>
+                            <th>Status</th>
+                            <th>Ações</th>
+                            <th>Logs</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for container in group.containers %}
+                        <tr id="container-{{ container.container.short_id }}">
+                            <td>{{ container.container.short_id }}</td>
+                            <td>{{ container.container.name }}</td>
+                            <td>{{ container.container.status }}</td>
+                            <td>
+                                <form method="POST" action="{{ url_for('start_container', container_id=container.container.id, bairro=bairro) }}" style="display:inline;">
+                                    <button type="submit" class="btn btn-success btn-sm">Iniciar</button>
+                                </form>
+                                <form method="POST" action="{{ url_for('pause_container', container_id=container.container.id, bairro=bairro) }}" style="display:inline;">
+                                    <button type="submit" class="btn btn-warning btn-sm">Pausar</button>
+                                </form>
+                                <form method="POST" action="{{ url_for('stop_container', container_id=container.container.id, bairro=bairro) }}" style="display:inline;">
+                                    <button type="submit" class="btn btn-danger btn-sm">Parar</button>
+                                </form>
+                            </td>
+                            <td>
+                                <button onclick="fetchLogs('{{ container.container.short_id }}')" class="btn btn-info btn-sm">Ver Logs</button>
+                            </td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
             </div>
-            
-            <div class="card mb-5 mt-3">
-                <div class="card-body p-0">
-                    <table class="table table-striped table-hover mb-0">
-                        <thead class="table-primary">
-                            <tr>
-                                <th>ID</th>
-                                <th>Nome</th>
-                                <th>Status</th>
-                                <th>Ações</th>
-                                <th>Logs</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for container in containers %}
-                            <tr id="container-{{ container.short_id }}">
-                                <td>{{ container.container.short_id }}</td>
-                                <td>{{ container.container.name }}</td>
-                                <td>{{ container.container.status }}</td>
-                                <td>
-                                    <form method="POST" action="{{ url_for('start_container', container_id=container.container.id, bairro=bairro) }}" style="display:inline;">
-                                        <button type="submit" class="btn btn-success btn-sm">Iniciar</button>
-                                    </form>
-                                    <form method="POST" action="{{ url_for('pause_container', container_id=container.container.id, bairro=bairro) }}" style="display:inline;">
-                                        <button type="submit" class="btn btn-warning btn-sm">Pausar</button>
-                                    </form>
-                                    <form method="POST" action="{{ url_for('stop_container', container_id=container.container.id, bairro=bairro) }}" style="display:inline;">
-                                        <button type="submit" class="btn btn-danger btn-sm">Parar</button>
-                                    </form>
-                                </td>                                
-                                <td>
-                                    <button onclick="fetchLogs('{{ container.container.short_id }}')" class="btn btn-info btn-sm">Ver Logs</button>
-                                </td>
-                            </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        {% endfor %}
+        </div>
     {% endfor %}
 </div>
 
