--- a/manager/src/templates/monitoramento.html
+++ b/manager/src/templates/monitoramento.html
@@ -4,9 +4,9 @@
 
 {% block content %}
 <div class="container-fluid mt-4">
-    <h2>Monitoramento de Logs do Contêiner</h2>
+    <h2>Container Log Monitoring</h2>
     <div id="logs">
-        <p>Carregando logs do contêiner <strong>{{ container_id }}</strong>...</p>
+        <p>Loading logs for container <strong>{{ container_id }}</strong>...</p>
     </div>
 </div>
 
