--- a/manager/src/templates/layout.html
+++ b/manager/src/templates/layout.html
@@ -21,16 +21,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link {% if request.endpoint == 'bairros' %}active{% endif %}" href="{{ url_for('bairros') }}">Seleção de Bairros</a>
+                        <a class="nav-link {% if request.endpoint == 'bairros' %}active{% endif %}" href="{{ url_for('bairros') }}">Neighborhood Selection</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link {% if request.endpoint == 'config_imagens' %}active{% endif %}" href="{{ url_for('config_imagens') }}">Configurar Imagens</a>
+                        <a class="nav-link {% if request.endpoint == 'config_imagens' %}active{% endif %}" href="{{ url_for('config_imagens') }}">Configure Images</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link {% if request.endpoint == 'config_dados' %}active{% endif %}" href="{{ url_for('config_dados') }}">Configurar Tipos de Dados</a>
+                        <a class="nav-link {% if request.endpoint == 'config_dados' %}active{% endif %}" href="{{ url_for('config_dados') }}">Configure Data Types</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link {% if request.endpoint == 'manage_types' %}active{% endif %}" href="{{ url_for('manage_types') }}">Gerenciar Tipos</a>
+                        <a class="nav-link {% if request.endpoint == 'manage_types' %}active{% endif %}" href="{{ url_for('manage_types') }}">Manage Types</a>
                     </li>                    
                 </ul>                
             </div>
